@@ -1,6 +1,9 @@
 Giraph Change Log
 
 Release 1.1.0 - unreleased
+  GIRAPH-839: NettyWorkerAggregatorRequestProcessor tries to reuse request objects 
+  (pavanka via majakabiljo)
+
   GIRAPH-835: org.apache.giraph.hive.input.CheckInputTest Fails because JobProgressTracker
   doesn't check null (akila via majakabiljo)
 
